Src/FilterEngine/FilterLexer.cpp
/* Generated by re2c 3.1 on Sat Jun  7 12:30:57 2025 */
#line 1 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
/**
 * @file  FilterLexer.re
 *
 * @brief Lexer for the filter parser.
 */
#line 11 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"


#include "pch.h"
#include "FilterParser.h"
#include "FilterLexer.h"
#include <string>

int FilterLexer::yylex()
{
begin:
	
#line 21 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
{
	char yych;
	unsigned int yyaccept = 0;
	yych = *YYCURSOR;
	switch (yych) {
		case '\t':
		case '\n':
		case '\r':
		case ' ': goto yy3;
		case '!': goto yy5;
		case '"': goto yy6;
		case '%': goto yy7;
		case '(': goto yy8;
		case ')': goto yy9;
		case '*': goto yy10;
		case '+': goto yy11;
		case ',': goto yy12;
		case '-': goto yy13;
		case '/': goto yy14;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy15;
		case '<': goto yy17;
		case '=': goto yy19;
		case '>': goto yy21;
		case 'A':
		case 'a': goto yy23;
		case 'B':
		case 'E':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'U':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'b':
		case 'e':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 'u':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy25;
		case 'C':
		case 'c': goto yy27;
		case 'D':
		case 'd': goto yy28;
		case 'F':
		case 'f': goto yy29;
		case 'M':
		case 'm': goto yy30;
		case 'N':
		case 'n': goto yy31;
		case 'O':
		case 'o': goto yy32;
		case 'T':
		case 't': goto yy33;
		case 'V':
		case 'v': goto yy34;
		default:
			if (YYLIMIT <= YYCURSOR) goto yy105;
			goto yy1;
	}
yy1:
	++YYCURSOR;
yy2:
#line 95 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return LEXER_ERR_UNKNOWN_CHAR; }
#line 116 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy3:
	yych = *++YYCURSOR;
	switch (yych) {
		case '\t':
		case '\n':
		case '\r':
		case ' ': goto yy3;
		default: goto yy4;
	}
yy4:
#line 22 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ goto begin; }
#line 129 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy5:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy35;
		default: goto yy2;
	}
yy6:
	++YYCURSOR;
#line 72 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{
		std::string str = UnescapeQuotes(YYCURSOR);
		if (*(YYCURSOR - 1) != '"')
			return LEXER_ERR_UNTERMINATED_STRING;
		yylval.string = DupString(str.c_str());
		return TK_STRING_LITERAL;
	}
#line 146 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy7:
	++YYCURSOR;
#line 92 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_MOD; }
#line 151 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy8:
	++YYCURSOR;
#line 86 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_LPAREN; }
#line 156 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy9:
	++YYCURSOR;
#line 87 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_RPAREN; }
#line 161 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy10:
	++YYCURSOR;
#line 90 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_STAR; }
#line 166 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy11:
	++YYCURSOR;
#line 88 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_PLUS; }
#line 171 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy12:
	++YYCURSOR;
#line 94 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_COMMA; }
#line 176 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy13:
	++YYCURSOR;
#line 89 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_MINUS; }
#line 181 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy14:
	++YYCURSOR;
#line 91 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_SLASH; }
#line 186 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy15:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy15;
		case 'D':
		case 'd': goto yy36;
		case 'G':
		case 'K':
		case 'T':
		case 'g':
		case 'k':
		case 't': goto yy38;
		case 'H':
		case 'h': goto yy40;
		case 'M':
		case 'm': goto yy41;
		case 'S':
		case 's': goto yy42;
		case 'W':
		case 'w': goto yy43;
		default: goto yy16;
	}
yy16:
#line 60 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{
		yylval.integer = std::stoi(std::string((const char*)yycursor, YYCURSOR - yycursor));
		return TK_INTEGER_LITERAL;
	}
#line 225 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy44;
		default: goto yy18;
	}
yy18:
#line 82 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_LT; }
#line 235 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy45;
		default: goto yy20;
	}
yy20:
#line 80 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_EQ; }
#line 245 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy46;
		default: goto yy22;
	}
yy22:
#line 84 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_GT; }
#line 255 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'N':
		case 'n': goto yy47;
		default: goto yy26;
	}
yy24:
#line 64 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{
		const char* p = yycursor;
		while (*p == ' ' || *p == '\t' || *p == '\r' || *p == '\n')
			p++;
		std::string tmp = std::string(p, YYCURSOR - p);
		yylval.string = DupString(tmp.c_str());
		return TK_IDENTIFIER;
	}
#line 274 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy25:
	yych = *++YYCURSOR;
yy26:
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy25;
		default: goto yy24;
	}
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'O':
		case 'o': goto yy48;
		default: goto yy26;
	}
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case '"': goto yy49;
		default: goto yy26;
	}
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'A':
		case 'a': goto yy50;
		default: goto yy26;
	}
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'A':
		case 'a': goto yy51;
		default: goto yy26;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'O':
		case 'o': goto yy52;
		default: goto yy26;
	}
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'R':
		case 'r': goto yy53;
		default: goto yy26;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'R':
		case 'r': goto yy55;
		default: goto yy26;
	}
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case '"': goto yy56;
		default: goto yy26;
	}
yy35:
	++YYCURSOR;
#line 81 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_NE; }
#line 410 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy36:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'A':
		case 'a': goto yy57;
		default: goto yy37;
	}
yy37:
#line 38 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{
		const char* p = yycursor;
		while (*p == ' ' || *p == '\t' || *p == '\r' || *p == '\n')
			p++;
		std::string lit(p, YYCURSOR - p);
		yylval.string = DupString(lit.c_str());
		return TK_DURATION_LITERAL;
	}
#line 429 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy38:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'B':
		case 'b': goto yy58;
		default: goto yy39;
	}
yy39:
	YYCURSOR = YYMARKER;
	if (yyaccept == 0) {
		goto yy16;
	} else {
		goto yy37;
	}
yy40:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'O':
		case 'o': goto yy59;
		case 'R':
		case 'r': goto yy60;
		default: goto yy37;
	}
yy41:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'B':
		case 'b': goto yy58;
		case 'I':
		case 'i': goto yy61;
		case 'S':
		case 's': goto yy62;
		default: goto yy37;
	}
yy42:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'E':
		case 'e': goto yy63;
		default: goto yy37;
	}
yy43:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'E':
		case 'e': goto yy64;
		default: goto yy37;
	}
yy44:
	++YYCURSOR;
#line 83 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_LE; }
#line 486 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy45:
	++YYCURSOR;
#line 79 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_EQ; }
#line 491 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy46:
	++YYCURSOR;
#line 85 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_GE; }
#line 496 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'D':
		case 'd': goto yy65;
		default: goto yy26;
	}
yy48:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'N':
		case 'n': goto yy67;
		default: goto yy26;
	}
yy49:
	++YYCURSOR;
#line 46 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{
		std::string str = UnescapeQuotes(YYCURSOR);
		if (*(YYCURSOR - 1) != '"')
			return LEXER_ERR_UNTERMINATED_STRING;
		yylval.string = DupString(str.c_str());
		return TK_DATETIME_LITERAL;
	}
#line 523 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy50:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'L':
		case 'l': goto yy68;
		default: goto yy26;
	}
yy51:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'T':
		case 't': goto yy69;
		default: goto yy26;
	}
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'T':
		case 't': goto yy70;
		default: goto yy26;
	}
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy25;
		default: goto yy54;
	}
yy54:
#line 24 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_OR; }
#line 619 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'U':
		case 'u': goto yy72;
		default: goto yy26;
	}
yy56:
	++YYCURSOR;
#line 53 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{
		std::string str = UnescapeQuotes(YYCURSOR);
		if (*(YYCURSOR - 1) != '"')
			return LEXER_ERR_UNTERMINATED_STRING;
		yylval.string = DupString(str.c_str());
		return TK_VERSION_LITERAL;
	}
#line 638 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy57:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'Y':
		case 'y': goto yy73;
		default: goto yy39;
	}
yy58:
	++YYCURSOR;
#line 30 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{
		const char* p = yycursor;
		while (*p == ' ' || *p == '\t' || *p == '\r' || *p == '\n')
			p++;
		std::string lit(p, YYCURSOR - p);
		yylval.string = DupString(lit.c_str());
		return TK_SIZE_LITERAL;
	}
#line 657 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy59:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'U':
		case 'u': goto yy74;
		default: goto yy39;
	}
yy60:
	++YYCURSOR;
	goto yy37;
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'L':
		case 'l': goto yy75;
		case 'N':
		case 'n': goto yy76;
		default: goto yy39;
	}
yy62:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'E':
		case 'e': goto yy77;
		default: goto yy37;
	}
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'C':
		case 'c': goto yy78;
		default: goto yy39;
	}
yy64:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'E':
		case 'e': goto yy79;
		default: goto yy39;
	}
yy65:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy25;
		default: goto yy66;
	}
yy66:
#line 23 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_AND; }
#line 770 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy67:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'T':
		case 't': goto yy80;
		default: goto yy26;
	}
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'S':
		case 's': goto yy81;
		default: goto yy26;
	}
yy69:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'C':
		case 'c': goto yy82;
		default: goto yy26;
	}
yy70:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy25;
		default: goto yy71;
	}
yy71:
#line 25 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ return TK_NOT; }
#line 866 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy72:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'E':
		case 'e': goto yy83;
		default: goto yy26;
	}
yy73:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'S':
		case 's': goto yy60;
		default: goto yy37;
	}
yy74:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'R':
		case 'r': goto yy73;
		default: goto yy39;
	}
yy75:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'L':
		case 'l': goto yy85;
		default: goto yy39;
	}
yy76:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'U':
		case 'u': goto yy86;
		default: goto yy37;
	}
yy77:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'C':
		case 'c': goto yy60;
		default: goto yy39;
	}
yy78:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'O':
		case 'o': goto yy87;
		default: goto yy37;
	}
yy79:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'K':
		case 'k': goto yy73;
		default: goto yy39;
	}
yy80:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'A':
		case 'a': goto yy88;
		default: goto yy26;
	}
yy81:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'E':
		case 'e': goto yy89;
		default: goto yy26;
	}
yy82:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'H':
		case 'h': goto yy91;
		default: goto yy26;
	}
yy83:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy25;
		default: goto yy84;
	}
yy84:
#line 26 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ yylval.boolean = true; return TK_TRUE_LITERAL; }
#line 1021 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy85:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'I':
		case 'i': goto yy92;
		default: goto yy39;
	}
yy86:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'T':
		case 't': goto yy93;
		default: goto yy39;
	}
yy87:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'N':
		case 'n': goto yy94;
		default: goto yy39;
	}
yy88:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'I':
		case 'i': goto yy95;
		default: goto yy26;
	}
yy89:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy25;
		default: goto yy90;
	}
yy90:
#line 27 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.re"
	{ yylval.boolean = false; return TK_FALSE_LITERAL; }
#line 1122 "C:\\dev\\winmerge\\Src\\FilterEngine\\FilterLexer.cpp"
yy91:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'E':
		case 'e': goto yy96;
		default: goto yy26;
	}
yy92:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'S':
		case 's': goto yy97;
		default: goto yy39;
	}
yy93:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'E':
		case 'e': goto yy73;
		default: goto yy39;
	}
yy94:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'D':
		case 'd': goto yy73;
		default: goto yy39;
	}
yy95:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'N':
		case 'n': goto yy98;
		default: goto yy26;
	}
yy96:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'S':
		case 's': goto yy99;
		default: goto yy26;
	}
yy97:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'E':
		case 'e': goto yy101;
		default: goto yy39;
	}
yy98:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy24;
		case 'S':
		case 's': goto yy102;
		default: goto yy26;
	}
yy99:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
